--- a/lib/ocean_shores/views/index.erb
+++ b/lib/ocean_shores/views/index.erb
@@ -1,1 +1,14 @@
 <h1>Ocean Shores</h1>
+<form action="/matches" method="post">
+  <div class="team">
+    <h3>Team 1</h3>
+    <label for="t1-p1">Player 1</label>
+    <input name="t1-p1" type="text" value="" />
+  </div>
+  <div class="team">
+    <h3>Team 2</h3>
+    <label for="t2-p1">Player 1</label>
+    <input name="t2-p1" type="text" value="" />
+  </div>
+  <input type="submit" value="Add Match">
+</form>
