--- a/lib/ocean_shores/views/index.erb
+++ b/lib/ocean_shores/views/index.erb
@@ -1,14 +1,16 @@
 <h1>Ocean Shores</h1>
-<form action="/matches" method="post">
-  <div class="team">
-    <h3>Team 1</h3>
-    <label for="t1-p1">Player 1</label>
-    <input name="t1-p1" type="text" value="" />
+<div class="row">
+  <div id="add-match" class=".col-md-12">
+    <form class="form-inline" action="/matches" method="post">
+      <div class="form-group">
+        <label for="t1-p1">Player 1</label>
+        <input class="form-control" name="t1-p1" type="text" value="" />
+      </div>
+      <div class="form-group">
+        <label for="t2-p1">Player 2</label>
+        <input class="form-control" name="t2-p1" type="text" value="" />
+      </div>
+      <button class="btn btn-default" type="submit">Add Match</button>
+    </form>
   </div>
-  <div class="team">
-    <h3>Team 2</h3>
-    <label for="t2-p1">Player 1</label>
-    <input name="t2-p1" type="text" value="" />
-  </div>
-  <input type="submit" value="Add Match">
-</form>
+</div>
